...
    <string name="hint_subject_color">Kolor</string>
    <string name="warning_add_subject_empty">Musisz podac przedmiot</string>
    <string name="warning_add_subject_badchar">Przedmiot musi zaczynac sie od litery</string>
    <string name="warning_add_subject_subject_already_exists">Podany przedmiot już istnieje</string>
    <string name="button_text_change_subject">Zmień</string>

    <string name="button_text_save">Zapisz</string>
    <string name="button_text_back">Cofnij</string>


    <!--Single subject exams-->
    <string name="sse_toolbar">Egzaminy</string>
    <string name="sse_default_exam_info">Brak opisu</string>
    <string name="sse_info_average">Średnia: %1$s</string>
...
