<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:text="@string/add_exam_dialog_title"
        android:textColor="@color/dark_textColorPrimary"
        android:padding="20dp"
        android:textSize="20sp"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subjects_recycler_view" >

    </android.support.v7.widget.RecyclerView>

</LinearLayout>