<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/dialogBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_input_text_title"
        android:text="Tytuł tego dialogu"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textColor="?android:attr/textColor"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/dialog_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColor"/>

</LinearLayout>